--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "react-native-scripts": "1.1.0",
     "jest-expo": "~19.0.0",
     "react-test-renderer": "16.0.0-alpha.12",
-    "react-native-button":"*"
-
+    "react-native-button": "*"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -23,6 +22,9 @@
   "dependencies": {
     "expo": "^19.0.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.46.1"
+    "react-native": "^0.46.1",
+    "react-native-router-flux": "^4.0.0-beta.27",
+    "react-navigation": "^1.0.0-beta.26",
+    "until": "*"
   }
 }
