--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "dependencies": {
     "expo": "^19.0.0",
-    "react": "16.0.0-alpha.12",
+    "moment": "^2.20.1",
+    "react": "^16.0.0-alpha.12",
+    "react-datepicker": "^1.0.4",
+    "react-dom": "^16.2.0",
     "react-native": "^0.46.1",
+    "react-native-datepicker": "^1.6.0",
     "react-native-router-flux": "^4.0.0-beta.27",
     "react-navigation": "^1.0.0-beta.26",
     "until": "*"
